--- a/styles.css
+++ b/styles.css
@@ -76,6 +76,9 @@ h1 {
 }
 
 .keyangoonknopf{
-    border: black solid 5px;
+    border: black solid 2px;
     border-radius: 15px; 
+    color: black;
+    text-decoration: none;
+    
 }
